--- a/chnword/Base.lproj/Main.storyboard
+++ b/chnword/Base.lproj/Main.storyboard
@@ -337,7 +337,7 @@
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
-                                                        <segue destination="pFy-qd-mVI" kind="modal" id="fdZ-qB-PpY"/>
+                                                        <segue destination="pFy-qd-mVI" kind="modal" identifier="QRSEARCH" id="fdZ-qB-PpY"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -915,11 +915,25 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lCt-iB-Ly3">
+                                <rect key="frame" x="277" y="540" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4F8-RQ-pMy"/>
+                                    <constraint firstAttribute="width" constant="46" id="zlH-zH-rSX"/>
+                                </constraints>
+                                <state key="normal" title="取消">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonClicked:" destination="pFy-qd-mVI" eventType="touchUpInside" id="LQn-qf-U14"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="YmZ-jn-zuf" secondAttribute="trailing" id="0SB-qg-d3f"/>
                             <constraint firstItem="wiA-wM-52C" firstAttribute="bottom" secondItem="EMx-sF-DIE" secondAttribute="top" id="CI5-OL-PgB"/>
+                            <constraint firstAttribute="centerX" secondItem="lCt-iB-Ly3" secondAttribute="centerX" id="DTF-ZK-lrv"/>
                             <constraint firstItem="bIz-dG-Alt" firstAttribute="top" secondItem="YmZ-jn-zuf" secondAttribute="bottom" id="EvI-1k-w2e"/>
                             <constraint firstItem="wiA-wM-52C" firstAttribute="leading" secondItem="bIz-dG-Alt" secondAttribute="trailing" id="Gft-um-RiW"/>
                             <constraint firstAttribute="centerX" secondItem="wiA-wM-52C" secondAttribute="centerX" id="MgC-P9-eLS"/>
@@ -929,6 +943,7 @@
                             <constraint firstItem="bIz-dG-Alt" firstAttribute="leading" secondItem="ndQ-z7-PwL" secondAttribute="leading" id="WgW-QO-Gg0"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EMx-sF-DIE" secondAttribute="trailing" constant="142" id="XFH-X0-fOf"/>
                             <constraint firstItem="EMx-sF-DIE" firstAttribute="leading" secondItem="ndQ-z7-PwL" secondAttribute="leading" id="a0V-vB-Vkw"/>
+                            <constraint firstAttribute="bottom" secondItem="lCt-iB-Ly3" secondAttribute="bottom" constant="30" id="b5U-sn-91x"/>
                             <constraint firstAttribute="trailing" secondItem="EMx-sF-DIE" secondAttribute="trailing" id="buc-5a-tZh"/>
                             <constraint firstItem="o2P-Td-cbO" firstAttribute="leading" secondItem="wiA-wM-52C" secondAttribute="trailing" id="c6c-de-UOI"/>
                             <constraint firstItem="wiA-wM-52C" firstAttribute="top" secondItem="YmZ-jn-zuf" secondAttribute="bottom" id="cmh-8e-AgO"/>
