--- a/chnword/Base.lproj/Main.storyboard
+++ b/chnword/Base.lproj/Main.storyboard
@@ -398,12 +398,12 @@
             </objects>
             <point key="canvasLocation" x="800" y="1000"/>
         </scene>
-        <!--111-->
+        <!--User View Controller-->
         <scene sceneID="G9n-97-RJd">
             <objects>
                 <tableViewController id="utr-gS-PDD" customClass="UserViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="static" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="Qgx-qq-Oqn">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <sections>
@@ -523,7 +523,6 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="" image="TAB-User" id="KqQ-Rg-0vP"/>
-                    <navigationItem key="navigationItem" title="111" id="UGy-Su-6Rc"/>
                     <connections>
                         <outlet property="phoneNumberField" destination="5JB-hu-uwO" id="bL3-fx-dns"/>
                     </connections>
