--- a/chnword/Base.lproj/Main.storyboard
+++ b/chnword/Base.lproj/Main.storyboard
@@ -337,7 +337,7 @@
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
-                                                        <segue destination="pFy-qd-mVI" kind="modal" identifier="QRSEARCH" id="fdZ-qB-PpY"/>
+                                                        <segue destination="FLG-IU-gX2" kind="modal" identifier="QRSEARCH" id="fdZ-qB-PpY"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -898,7 +898,7 @@
                                     <constraint firstAttribute="height" constant="200" id="kar-F4-rlb"/>
                                 </constraints>
                             </view>
-                            <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YmZ-jn-zuf" userLabel="top">
+                            <view alpha="0.59999999999999998" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YmZ-jn-zuf" userLabel="top">
                                 <rect key="frame" x="0.0" y="20" width="600" height="180"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -916,17 +916,14 @@
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lCt-iB-Ly3">
-                                <rect key="frame" x="277" y="540" width="46" height="30"/>
+                                <rect key="frame" x="210" y="540" width="180" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="4F8-RQ-pMy"/>
-                                    <constraint firstAttribute="width" constant="46" id="zlH-zH-rSX"/>
+                                    <constraint firstAttribute="width" constant="180" id="zlH-zH-rSX"/>
                                 </constraints>
-                                <state key="normal" title="取消">
+                                <state key="normal" title="请扫描汉字卡片上的二维码">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <action selector="cancelButtonClicked:" destination="pFy-qd-mVI" eventType="touchUpInside" id="LQn-qf-U14"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -971,10 +968,13 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="nXh-0T-Jz6">
+                        <barButtonItem key="backBarButtonItem" title="返回" id="7nN-ql-FKr"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jxw-VR-mQC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1633" y="2975"/>
+            <point key="canvasLocation" x="2445" y="2975"/>
         </scene>
         <!--PLAYER-->
         <scene sceneID="NXQ-3p-wLJ">
@@ -1393,6 +1393,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3UR-25-dJv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2381" y="1987"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="det-ro-Lju">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FLG-IU-gX2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="06e-f7-Dqg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pFy-qd-mVI" kind="relationship" relationship="rootViewController" id="mQf-Mr-QkK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="USt-23-l3C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1633" y="2975"/>
         </scene>
     </scenes>
     <resources>
