--- a/chnword/Base.lproj/Main.storyboard
+++ b/chnword/Base.lproj/Main.storyboard
@@ -397,6 +397,40 @@
             </objects>
             <point key="canvasLocation" x="800" y="1000"/>
         </scene>
+        <!--Web View Controller-->
+        <scene sceneID="8dN-F8-qwL">
+            <objects>
+                <viewController id="mEa-hm-CfY" customClass="WebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c8W-f0-70T"/>
+                        <viewControllerLayoutGuide type="bottom" id="mUP-kS-njm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ttd-70-U3i">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nSE-J0-Fbx">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="nSE-J0-Fbx" secondAttribute="bottom" id="8gK-BX-rj1"/>
+                            <constraint firstAttribute="trailing" secondItem="nSE-J0-Fbx" secondAttribute="trailing" id="ffm-8T-5h7"/>
+                            <constraint firstItem="nSE-J0-Fbx" firstAttribute="leading" secondItem="Ttd-70-U3i" secondAttribute="leading" id="lcY-q9-rd1"/>
+                            <constraint firstItem="nSE-J0-Fbx" firstAttribute="top" secondItem="c8W-f0-70T" secondAttribute="bottom" id="vuU-hO-yQi"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sCZ-ey-y4P"/>
+                    <connections>
+                        <outlet property="webView" destination="nSE-J0-Fbx" id="M47-uU-wK9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3eR-Oz-K82" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4672" y="1000"/>
+        </scene>
         <!--User View Controller-->
         <scene sceneID="G9n-97-RJd">
             <objects>
@@ -524,11 +558,12 @@
                     <navigationItem key="navigationItem" id="c0Q-Hi-ncP"/>
                     <connections>
                         <outlet property="phoneNumberField" destination="5JB-hu-uwO" id="bL3-fx-dns"/>
+                        <segue destination="mEa-hm-CfY" kind="push" id="aaI-Vw-2wC"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x6S-YN-hHZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4005" y="1000"/>
+            <point key="canvasLocation" x="3955" y="995"/>
         </scene>
         <!--产品商店-->
         <scene sceneID="3UY-tn-oGM">
