--- a/chnword/Base.lproj/Main.storyboard
+++ b/chnword/Base.lproj/Main.storyboard
@@ -444,6 +444,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mCm-Ot-G3o">
+                                <rect key="frame" x="11" y="31" width="578" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="cgS-d3-2Un"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVk-pr-MAU">
                                 <rect key="frame" x="208" y="464" width="185" height="56"/>
                                 <constraints>
@@ -455,15 +464,15 @@
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6C-yd-cF4">
-                                <rect key="frame" x="20" y="276" width="560" height="21"/>
+                                <rect key="frame" x="20" y="242" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您的联系方式" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhD-gx-e35">
                                 <rect key="frame" x="11" y="338" width="578" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mSo-Nm-hjh">
@@ -472,16 +481,19 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="c6C-yd-cF4" firstAttribute="bottom" secondItem="AhD-gx-e35" secondAttribute="bottom" constant="-62" id="9sZ-pg-NTM"/>
+                            <constraint firstItem="c6C-yd-cF4" firstAttribute="bottom" secondItem="AhD-gx-e35" secondAttribute="bottom" constant="-96" id="9sZ-pg-NTM"/>
                             <constraint firstItem="mSo-Nm-hjh" firstAttribute="bottom" secondItem="AhD-gx-e35" secondAttribute="top" constant="67" id="CH4-Pr-aaR"/>
                             <constraint firstItem="c6C-yd-cF4" firstAttribute="leading" secondItem="6uy-cs-bTp" secondAttribute="leading" constant="20" id="DVn-HN-aDC"/>
                             <constraint firstAttribute="bottom" secondItem="KVk-pr-MAU" secondAttribute="bottom" constant="80" id="GnF-DU-K0k"/>
+                            <constraint firstItem="mCm-Ot-G3o" firstAttribute="leading" secondItem="6uy-cs-bTp" secondAttribute="leading" constant="11" id="H7V-uW-Vnk"/>
+                            <constraint firstItem="mCm-Ot-G3o" firstAttribute="top" secondItem="wmt-62-rmE" secondAttribute="bottom" constant="11" id="QiU-26-2SM"/>
                             <constraint firstAttribute="trailing" secondItem="c6C-yd-cF4" secondAttribute="trailing" constant="20" id="TK3-UX-MkL"/>
                             <constraint firstAttribute="centerX" secondItem="KVk-pr-MAU" secondAttribute="centerX" id="V0Q-KR-rN8"/>
                             <constraint firstItem="KVk-pr-MAU" firstAttribute="top" secondItem="mSo-Nm-hjh" secondAttribute="bottom" constant="59" id="VSC-gt-Xwe"/>
                             <constraint firstItem="mSo-Nm-hjh" firstAttribute="leading" secondItem="6uy-cs-bTp" secondAttribute="leading" constant="11" id="aJg-eS-m2D"/>
+                            <constraint firstAttribute="trailing" secondItem="mCm-Ot-G3o" secondAttribute="trailing" constant="11" id="acZ-Rh-YWm"/>
                             <constraint firstAttribute="trailing" secondItem="AhD-gx-e35" secondAttribute="trailing" constant="11" id="fVd-nT-h1q"/>
                             <constraint firstItem="AhD-gx-e35" firstAttribute="leading" secondItem="6uy-cs-bTp" secondAttribute="leading" constant="11" id="gMd-6Y-BwN"/>
                             <constraint firstAttribute="trailing" secondItem="mSo-Nm-hjh" secondAttribute="trailing" constant="11" id="wPA-Py-iTh"/>
@@ -580,7 +592,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="建议反馈" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KsQ-Ps-AJE">
                                                     <rect key="frame" x="13" y="13" width="300" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -607,7 +619,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="引导页" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dM8-7M-FjF">
                                                     <rect key="frame" x="13" y="13" width="300" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -634,7 +646,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="邀请好友" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tmh-wP-Ih9">
                                                     <rect key="frame" x="13" y="13" width="300" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -665,7 +677,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="关于" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWi-lA-xsD">
                                                     <rect key="frame" x="13" y="13" width="300" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
